redis-dev.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-stedi-dev-felipe
spec:
  ports:
    - port: 6379
      name: redis
  clusterIP: None
  selector:
    app: redis-stedi-dev-felipe
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis-stedi-dev-felipe
spec:
  selector:
    matchLabels:
      app: redis-stedi-dev-felipe  # has to match .spec.template.metadata.labels
  serviceName: redis-stedi-dev-felipe
  replicas: 1
  template:
    metadata:
      labels:
        app: redis-stedi-dev-felipe  # has to match .spec.selector.matchLabels
    spec:
      containers:
        - name: redis-stedi-dev-felipe
          image: redis:7.0.5-alpine
          imagePullPolicy: Always
          args: ["--requirepass", "$(REDIS_PASS)", "--appendonly", "yes", "--save", "900", "1", "--save", "30", "2"]
          ports:
            - containerPort: 6379
              name: redis
          # Resources are the compute resources used by the pod in the cloud
          resources:
            # Limites represent the max amount of cpu and memory allowed for the pod
            limits:
              # CPU is the max amount of CPU that can be used by the pod
              cpu: ".125"
              # Memory is the max amount of memory that can be used by the pod
              memory: "500Mi"
            # Resquests is the minimum amount of compute resources used by the pod
            requests: 
              # CPU is the minimum amount of CPU the pod needs to run
              cpu: ".1"
              # Memory is the minimum amount of memory the pod needs to run
              memory: "250Mi"
          volumeMounts:
            - name: redis-dev-volume
              mountPath: /data
  volumeClaimTemplates:
  - metadata:
      name: redis-dev-volume
    spec:
      accessModes:
        - ReadWriteOnce
      resources:
        requests:
          storage: 10Gi
