app-test.yaml
# This is the version of YAML we are using with the kubernetes API
apiVersion: apps/v1
# The kind is the type of Kubernetes resource we are using
# A deployment is when we run code on a server
kind: Deployment
# Metadata is information related to the object we created in Kubernetes
metadata:
  # The name here is the name of our deployment
  name: stedi-felipe-test
  
spec:
    #replicas refers to the number of pods we deploy
    replicas: 1
    # A selector is a route to my pod
    selector:
      # MatchLabels are a label for my selector
      matchLabels:
        # App is a specific kind of label for my pod
        app: stedi-felipe-test
    # The template describes all the features of my pod
    template:
      # The metadata provides labels for my template
      metadata:
        labels:
          app: stedi-felipe-test
      # The spec refers to the specification of my containers in my pod
      spec:
        # Containers can have one or more Docker containers in the pod
        containers:
          # The name of the container is specified below
          - name: stedi-felipe-test
            # The image is a prebuilt file containing the operating system
            image: gcr.io/group-project-cloud-account/stedi-felipe
            ports: 
              # The container port is a specific port the pod listens on
              - containerPort: 4567
            # Resources are the compute resources used by the pod in the cloud
            resources:
              # Limites represent the max amount of cpu and memory allowed for the pod
              limits:
                # CPU is the max amount of CPU that can be used by the pod
                cpu: ".125"
                # Memory is the max amount of memory that can be used by the pod
                memory: "500Mi"
              # Resquests is the minimum amount of compute resources used by the pod
              requests: 
                # CPU is the minimum amount of CPU the pod needs to run
                cpu: ".1"
                # Memory is the minimum amount of memory the pod needs to run
                memory: "250Mi"
              # LivenessProbe is a configuration that checks the pod for health
            livenessProbe:
              # HttpGet instructs kubernetes to do an HTTP request to check health
              httpGet:
                # Path defines the url to use when doing the HTTP request
               path: /
                # Port defines the port to use when doing the HTTP request
               port: 4567
            # InitialDelaySeconds tells Kubernetes to wait before doing a request
              initialDelaySeconds: 10
            # periodSeconds tells Kubernetes how often to check health
              periodSeconds: 3
---
# apiVersion tells Kubernetes which version of yaml to use
apiVersion: v1
# Kind tells Kubernetes what kind of object to create
kind: Service
# Metadata contains attributes about the object
metadata:
  # Name is the name of the object we are creating
  name: stedi-nodeport-felipe
# Spec is the specification for the object (or the loadbalancer)
spec:
  # Selector tells the network layer how to find the right pod
  selector:
    # App tells the selector which app to send traffic to
    app: stedi-felipe-test
  # Type tells Kubernetes the type of service we want
  # a NodePort distributes network packets to one or more pods
  type: NodePort
  # Ports are a list of ports the Load Balancer listens on
  ports:
    # Port we want to listen on the network
    - port: 80
    # Targetport is the port the pod listens on inside Kubernetes
      targetPort: 4567

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stedi-ingress-felipe
  annotations:
    kubernetes.io/ingress.global-static-ip-name: stedi-public-felipe
    networking.gke.io/managed-certificates: stedi-certificate-felipe
    kubernetes.io/ingress.allow-http: "false"
    kubernetes.io/ingress.class: "gce"
spec:
  defaultBackend:
    service:
      name: stedi-nodeport-felipe
      port:
        number: 80
